// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

message ExecutionTriggerInfo {
  TriggerType triggerType = 1;
  TriggeredBy triggeredBy = 2;
  bool isRerun = 3;
  RerunInfo rerunInfo = 4;
}

message TriggeredBy {
  string uuid = 1;
  string identifier = 2;
  map<string, string> extraInfo = 3;
}

enum TriggerType {
  NOOP = 0;
  MANUAL = 1;
  WEBHOOK = 2;
  WEBHOOK_CUSTOM = 3;
  SCHEDULER_CRON = 4;
}

message RerunInfo {
  string rootExecutionId = 1;
  TriggerType rootTriggerType = 2;

  string prevExecutionId = 3;
  TriggerType prevTriggerType = 4;
}
